Fixed #10.
Changed Java version to 17.
Bumped version to BETA-0.8.2-SNAPSHOT.
Small bug fix.